--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>To Do List</title>
 </head>
+
 <body>
     <script src="./script.js"></script>
+    <script>
+        const toDo1 = new ToDo('body')
+    </script>
 </body>
+
 </html>
